force-app/main/Government_Documents/Permit_And_Licensing/objects/Public_Comment__c/Public_Comment__c.object-meta.xml
<CustomObject>
    <label>Public Comment</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Comment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Public Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>