force-app/main/Government_Documents/Permit_And_Licensing/objects/Public_Comment__c/fields/APD_Application__c.field-meta.xml
<CustomField>
    <fullName>APD_Application__c</fullName>
    <label>APD Application</label>
    <relationshipLabel>Public Comments</relationshipLabel>
    <relationshipName>Public_Comments</relationshipName>
    <referenceTo>APD_Application__c</referenceTo>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>