force-app/main/Government_Documents/Permit_And_Licensing/objects/Public_Comment__c/fields/Comment_Text__c.field-meta.xml
<CustomField>
    <fullName>Comment_Text__c</fullName>
    <label>Comment Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>