force-app/main/Government_Documents/Permit_And_Licensing/objects/Public_Comment__c/fields/Commenter_Name__c.field-meta.xml
<CustomField>
    <fullName>Commenter_Name__c</fullName>
    <label>Commenter Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>