force-app/main/Government_Documents/Permit_And_Licensing/objects/Public_Comment__c/fields/Requires_Response__c.field-meta.xml
<CustomField>
    <fullName>Requires_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Response</label>
    <type>Checkbox</type>
</CustomField>