force-app/main/Government_Documents/Permit_And_Licensing/objects/Public_Comment__c/fields/Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Sentiment__c</fullName>
    <label>Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Neutral</fullName>
                <default>true</default>
                <label>Neutral</label>
            </value>
            <value>
                <fullName>Oppose</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>